# glifzip

./: .gitignore  API_REFERENCE.md  BENCHMARKING_GUIDE.md  BENCHMARK_IMPLEMENTATION_COMPLETE.md  BENCHMARK_QUICK_REFERENCE.md  BENCHMARK_README.md  BENCHMARK_SUITE_SUMMARY.md  CHANGELOG.md  CLI_MANUAL.md  CONTRIBUTING.md  CRATES_IO_READY.md  Cargo.toml  DEPLOYMENT.md  FAQ.md  GITHUB_SETUP_INSTRUCTIONS.md  GLYPHOS_INTEGRATION.md  LICENSE  MACOS_SUPPORT.md  PERFORMANCE_GUIDE.md  README.md  SETUP_COMPLETE.md  TROUBLESHOOTING.md  USER_GUIDE.md  WEEK1_COMPLETION.md  WEEK2_COMPLETION.md  create-github-release.sh  run_benchmarks.sh  setup-github.sh  test_benchmarks.sh
.github/workflows/: ci.yml  release.yml
benches/: comprehensive_bench.rs  compression_bench.rs  decompression_bench.rs  performance_suite.rs  zip_comparison.rs
scripts/: visualize_benchmarks.py
src/: lib.rs  main.rs
src/archive/: apple_metadata.rs  directory_compressor.rs  file_entry.rs  manifest.rs  mod.rs
src/compression/: lz4_decompressor.rs  mod.rs  zstd_compressor.rs
src/format/: header.rs  mod.rs  sidecar.rs
src/platform/: macos.rs  mod.rs
src/verification/: mod.rs  sha256.rs
tests/: compression_tests.rs  decompression_tests.rs  directory_compression_tests.rs  integration_tests.rs  metadata_preservation_tests.rs
